--- a/project_1/pom.xml
+++ b/project_1/pom.xml
@@ -6,6 +6,12 @@
 	<artifactId>project_1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
+<properties>
+    <java.version>1.8</java.version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+</properties>
+
 	<profiles>
 		<profile>
 			<id>ST</id>
@@ -58,6 +64,25 @@
 				</plugins>
 			</build>
 		</profile>
+		
+		<profile>
+			<id>TP</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>3.4.0</version>
+						<configuration>
+							<suiteXmlFiles>
+								<suiteXmlFile>testingPanel.xml</suiteXmlFile>
+							</suiteXmlFiles>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		
 	</profiles>
 
 
